open62541: fix build system for windows

--- a/devOpcuaSup/open62541/Makefile.config
+++ b/devOpcuaSup/open62541/Makefile.config
@@ -25,7 +25,7 @@ USR_CXXFLAGS += -DHAS_XMLPARSER
 ifneq ($(filter -D_MINGW,$(OP_SYS_CPPFLAGS)),)
 USR_INCLUDES += -I$(MSYSTEM_PREFIX)/include/libxml2
 else
-USR_INCLUDES += -I/usr/include/libxml2
+USR_INCLUDES_Linux += -I/usr/include/libxml2
 endif
 
 opcua_SRCS += Session.cpp
